argocd/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: argo-cd-argocd-server
              servicePort: 80
